# grav

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  conanfile.py  generate_compile_commands.bash  run_clang_tidy.bash
.vscode_recommended/: c_cpp_properties.json  launch.json  settings.json  tasks.json
include/: input_handling.hpp
src/: grav.cpp  input_handling.cpp
